Fix layout issues with mobile devices.

--- a/themes/rusted/static/css/_bootstrap-overrides.scss
+++ b/themes/rusted/static/css/_bootstrap-overrides.scss
@@ -4,3 +4,9 @@
     border-color: rgb(53, 126, 189);
     color: rgb(255, 255, 255);
 }
+
+@media (max-width: $screen-xs-max) {
+  .custom-xs-text-left {
+    text-align: left;
+  }
+}
