--- a/themes/rusted/static/css/main.scss
+++ b/themes/rusted/static/css/main.scss
@@ -1,5 +1,7 @@
 @charset "utf-8";
 
+// Bootstrap variables
+$screen-xs-max: 768px !default;
 
 // Our variables
 $base-font-family: 'Fira Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
